# real-time-fraud-detection

./: README.md  pyproject.toml  requirements.txt
fraud_api/: main.py
fraud_api/app/: __init__.py
fraud_api/app/controllers/: AlertController.py
fraud_api/app/models/: alert.py
fraud_api/app/routers/: alerts.py
fraud_api/tests/: test_alert.py
fraud_detector/: fraud_detector.py
fraud_handler/: fraud_handler.py
mongodb-cluster/: compose.yaml
transaction_producer/: generate_transaction.py  transaction_producer.py
