[tool.poetry]
name = "real-time-fraud-detection"
version = "0.1.0"
description = "real time fraud detection of financial transaction using python and kafka"
authors = ["Siddharth Nandagopal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kafka-python = "^2.0.2"
Faker = "^30.1.0"
kafka = "^1.3.5"
kafka-python-ng = "^2.2.3"
pymongo = "^4.10.1"
uvicorn = "^0.31.0"
starlette = "^0.38.6"
fastapi = "^0.115.0"
mongoengine = "^0.29.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
